# standard_objects

./: CMakeLists.txt  README.md  package.xml
env-hooks/: standard_objects.sh
models/bleach/: model.config  model.sdf
models/bleach/meshes/: textured.dae
models/chips/: model.config  model.sdf
models/chips/meshes/: nontextured_simple.stl
models/coffee/: model.config  model.sdf
models/coffee/meshes/: textured.dae
models/cracker/: model.config  model.sdf
models/cracker/meshes/: nontextured_simple.stl  textured.dae
models/jello/: model.config  model.sdf
models/jello/meshes/: textured.dae
models/mustard/: model.config  model.sdf
models/mustard/meshes/: textured.dae
models/pitcher/: model.config  model.sdf
models/pitcher/meshes/: textured.dae
models/potted meat/: model.config  model.sdf
models/potted meat/meshes/: nontextured_simple.stl  textured.dae
models/pudding/: model.config  model.sdf
models/pudding/meshes/: textured.dae
models/sugar/: model.config  model.sdf
models/sugar/meshes/: textured.dae
models/tomato soup/: model.config  model.sdf
models/tomato soup/meshes/: nontextured_simple.stl  textured.dae
models/tuna/: model.config  model.sdf
models/tuna/meshes/: textured.dae
models/windex/: model.config  model.sdf
models/windex/meshes/: textured.dae
