<?xml version="1.0"?>
<package>
  <name>standard_objects</name>
  <version>0.0.0</version>
  <description>The standard_objects package</description>

  <maintainer email="jiangyuqian@utexas.edu">Yuqian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
